--- a/styles.css
+++ b/styles.css
@@ -2,4 +2,14 @@
     width: 50px;
     height: 50px;
     background-color: aqua;
+    border: 1px solid black;
+}
+
+.grid {
+    border: 3px solid blue;
+    display: flex;
+    justify-content: start;
+    flex-wrap: wrap;
+    /* width: 500px;
+    height: 500px; */
 }
