--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
     width: 50px;
     height: 50px;
     background-color: aqua;
-    border: 1px solid black;
+    /* border: 1px solid black; */
 }
 
 .grid {
