--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,20 @@
 .square {
     width: 50px;
     height: 50px;
-    background-color: aqua;
-    /* border: 1px solid black; */
+    background-color: darkcyan;
+   
+}
+
+.squareLight {
+    width: 50px;
+    height: 50px;
+    background-color: burlywood;
+}
+
+.squareDark {
+    width: 50px;
+    height: 50px;
+    background-color: darkblue;
 }
 
 .grid {
