--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,8 @@
-.square {
+.block {
     width: 50px;
     height: 50px;
     background-color: darkcyan;
    
-}
-
-.squareLight {
-    width: 50px;
-    height: 50px;
-    background-color: burlywood;
-}
-
-.squareDark {
-    width: 50px;
-    height: 50px;
-    background-color: darkblue;
 }
 
 .grid {
