--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
     width: 50px;
     height: 50px;
     background-color: darkcyan;
-   
+   position: relative;
 }
 
 .grid {
@@ -12,4 +12,60 @@
     flex-wrap: wrap;
     /* width: 500px;
     height: 500px; */
+}
+
+.one {
+    background-color: black;
+    /* width: 100px;
+    height: 100px; */
+  }
+  
+  .one::before {
+    content: '';
+    background-color: yellowgreen;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    -webkit-clip-path: polygon(0% 0%, 0% 100%, 100% 100%, 100% 100%);
+            clip-path: polygon(0% 0%, 0% 100%, 100% 100%, 100% 100%);
+  }
+  
+  .two {
+    background-color: black;
+   
+  }
+  .two::before {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    -webkit-clip-path: polygon(100% 0, 0% 100%, 100% 100%);
+            clip-path: polygon(100% 0, 0% 100%, 100% 100%);
+  }
+
+  .yellowgreen2::before {
+    content: '';
+    background-color: yellowgreen;    
+  }
+  
+  .yellowgreen {
+    background-color: yellowgreen;
+   
+  }
+  
+  .black {
+    background-color: black;
+   
+  }
+
+  .magenta2::before {
+    content: '';
+    background-color: darkmagenta;
+  }
+
+  .magenta {
+      background-color: darkmagenta;
+  }
+
+  .white {
+    background-color: white;
 }
